# kair0s

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.build.json  tsconfig.json  vitest.config.ts  vitest.integration.config.ts  vitest.live.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md  security.md
docs/: README.md  api.md  architecture.md  quick-start.md  setup.md
docs/adr/: ADR-0001-secure-sqlite-storage.md
docs/development/: setup.md
scripts/: run-integration-tests.mjs
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: UnifiedEntry.tsx
src/config/: engine-config.ts  engine-manager.ts  index.ts  unified-entry.ts
src/gateway/: openclawGateway.ts
src/hooks/: useArtifacts.ts  useEngineConfig.ts  useIntelligentOrchestrator.ts  useUnifiedEntry.ts
src/integration/: e2e-integration.ts
src/migration/: index.ts  legacy-aliases.ts  legacy-shims.ts
src/plugins/: PluginList.tsx  plugin.json
src/services/: advanced-analytics.ts  artifact-manager.ts  intelligent-orchestrator.ts  performance-optimizer.ts  plugin-marketplace.ts  proactive.py  quality-monitor.ts  realtime-collaboration.ts  security-manager.ts
src/tests/: README-avance.md  README-ultra-complex.md  README.md  additional-working-tests.test.ts  advanced-integration.test.ts  advanced-performance-tests.test.ts  advanced-react-tests.test.tsx  advanced-ui-practical.test.ts  advanced-ui-tests.test.tsx  (+22 more)
(+29 files in other folders)
