[package]
name = "kair0s"
version = "0.1.0"
description = "Kair0s - AI Gateway with Unified Interface"
authors = ["Kairos Team"]
license = "MIT"
repository = "https://github.com/kairos/kair0s"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

[lib]
name = "kair0s_lib"
crate-type = ["cdylib"]

[[bin]]
name = "kair0s"
path = "src/main.rs"
